test/errors/expressions_error/zs/offsets/signed_varint_error.zs
package offsets.signed_varint_error;

struct SignedVarintError
{
    varint offset;
offset:
    uint32 values[];
};
